--- a/wm/fluxter/Makefile
+++ b/wm/fluxter/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.1.1.1 2006/04/08 23:29:21 minskim Exp $
+# $NetBSD: Makefile,v 1.2 2006/07/22 04:46:19 rillig Exp $
 #
 
 DISTNAME=		fluxter-0.1.0
@@ -23,5 +23,5 @@ post-install:
 	${INSTALL_DATA_DIR} ${EXDIR}
 	${INSTALL_DATA} ${WRKSRC}/examples/fluxter.bb ${EXDIR}
 
-.include "../../mk/x11.buildlink3.mk"
+.include "../../x11/libX11/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
