--- a/wm/wmextra/Makefile
+++ b/wm/wmextra/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.11 2006/02/05 23:11:16 joerg Exp $
+# $NetBSD: Makefile,v 1.12 2006/03/04 21:30:55 jlam Exp $
 #
 
 DISTNAME=		WindowMaker-extra-0.1
@@ -16,5 +16,4 @@ DEPENDS+=		windowmaker>=0.80.0nb1:../../wm/windowmaker
 USE_X11BASE=		yes
 GNU_CONFIGURE=		yes
 
-.include "../../mk/x11.buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
