--- a/wm/bbkeys/Makefile
+++ b/wm/bbkeys/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.18 2006/07/22 04:46:19 rillig Exp $
+# $NetBSD: Makefile,v 1.19 2006/08/20 23:08:44 jschauma Exp $
 #
 
 DISTNAME=	bbkeys-0.8.6
@@ -16,5 +16,9 @@ GNU_CONFIGURE=	YES
 USE_LANGUAGES=	c c++
 USE_TOOLS+=	perl:run
 
-.include "../../mk/x11.buildlink3.mk"
+BUILDLINK_DEPMETHOD.libXt?=	build
+
+.include "../../x11/libSM/buildlink3.mk"
+.include "../../x11/libX11/buildlink3.mk"
+.include "../../x11/libXt/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
