--- a/time/dclock/Makefile
+++ b/time/dclock/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.14 2006/02/05 23:11:09 joerg Exp $
+# $NetBSD: Makefile,v 1.15 2006/03/04 21:30:52 jlam Exp $
 #
 
 DISTNAME=	dclock
@@ -16,5 +16,5 @@ CONFLICTS+=	ivtools-*
 WRKSRC=		${WRKDIR}
 USE_X11BASE=	yes
 
-.include "../../mk/x11.buildlink3.mk"
+.include "../../x11/libXt/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
