--- a/time/xdaliclock/Makefile
+++ b/time/xdaliclock/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.6 2005/06/01 18:03:24 jlam Exp $
+# $NetBSD: Makefile,v 1.7 2006/02/05 23:11:11 joerg Exp $
 #
 
 DISTNAME=		xdaliclock-2.18
@@ -14,5 +14,6 @@ COMMENT=		Animated digital clock
 WRKSRC=			${WRKDIR}/${DISTNAME}/X11
 GNU_CONFIGURE=		yes
 
-.include "../../mk/x11.buildlink3.mk"
+.include "../../x11/libXext/buildlink3.mk"
+.include "../../x11/libXt/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
