--- a/parallel/clusterit/Makefile
+++ b/parallel/clusterit/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.15 2006/02/05 23:10:34 joerg Exp $
+# $NetBSD: Makefile,v 1.16 2006/08/28 07:47:55 ghen Exp $
 
 DISTNAME=		clusterit-2.4
 PKGREVISION=		1
@@ -11,5 +11,8 @@ COMMENT=		Clustering package for unix
 
 GNU_CONFIGURE=		YES
 
-.include "../../mk/x11.buildlink3.mk"
+BUILDLINK_DEPMETHOD.libXt?=	build
+
+.include "../../x11/libX11/buildlink3.mk"
+.include "../../x11/libXt/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
