--- a/games/xworm/Makefile
+++ b/games/xworm/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.14 2005/06/16 06:57:56 jlam Exp $
+# $NetBSD: Makefile,v 1.15 2006/02/05 23:09:26 joerg Exp $
 
 DISTNAME=	xworm102
 PKGNAME=	xworm-1.02
@@ -14,8 +14,6 @@ BUILD_TARGET=	bsd
 
 INSTALLATION_DIRS=	bin
 
-.include "../../mk/x11.buildlink3.mk"
-
 do-install:
 	@ ${INSTALL_PROGRAM} ${WRKSRC}/xworm ${PREFIX}/bin
 	@ ${INSTALL_DATA_DIR} ${PREFIX}/share/xworm
@@ -23,4 +21,5 @@ do-install:
 	${INSTALL_DATA} ${WRKSRC}/xworm.${file} ${PREFIX}/share/xworm
 .endfor
 
+.include "../../x11/libXt/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
