--- a/games/xzip/Makefile
+++ b/games/xzip/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.11 2005/06/01 18:02:53 jlam Exp $
+# $NetBSD: Makefile,v 1.12 2006/02/05 23:09:26 joerg Exp $
 
 DISTNAME=		xzip180
 PKGNAME=		xzip-1.8
@@ -15,5 +15,5 @@ WRKSRC=			${WRKDIR}/xzip
 USE_X11BASE=		yes
 BUILD_TARGET=		xzip
 
-.include "../../mk/x11.buildlink3.mk"
+.include "../../x11/libX11/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
