--- a/net/ucspi-tcp/Makefile
+++ b/net/ucspi-tcp/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.30 2006/07/27 18:48:03 jlam Exp $
+# $NetBSD: Makefile,v 1.31 2007/01/07 09:14:07 rillig Exp $
 
 DISTNAME=		ucspi-tcp-0.88
-PKGREVISION=		1
+PKGREVISION=		2
 CATEGORIES=		sysutils net
 MASTER_SITES=		http://cr.yp.to/ucspi-tcp/ ftp://cr.yp.to/ucspi-tcp/
 DISTFILES=		${DISTNAME}.tar.gz ${MANPAGES}
