--- a/sysutils/fsviewer/Makefile
+++ b/sysutils/fsviewer/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.20 2006/02/05 23:10:50 joerg Exp $
+# $NetBSD: Makefile,v 1.21 2006/04/17 13:46:47 wiz Exp $
 
 DISTNAME=	FSViewer.app-0.2.5
 PKGNAME=	FSViewer-0.2.5
@@ -19,4 +19,5 @@ USE_PKGLOCALEDIR=	yes
 GNU_CONFIGURE=		yes
 
 .include "../../wm/windowmaker/buildlink3.mk"
+.include "../../x11/libXmu/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
