--- a/games/finalbattle/Makefile
+++ b/games/finalbattle/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.10 2006/09/09 02:42:00 obache Exp $
+# $NetBSD: Makefile,v 1.11 2006/10/04 21:43:00 wiz Exp $
 #
 
 DISTNAME=	finalbattle.0.0
@@ -17,5 +17,5 @@ MAKE_FILE=	makefile
 
 USE_X11BASE=	yes
 
-.include "../../mk/x11.buildlink3.mk"
+.include "../../x11/libX11/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
