--- a/misc/astrolog/Makefile
+++ b/misc/astrolog/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.29 2006/02/05 23:10:06 joerg Exp $
+# $NetBSD: Makefile,v 1.30 2006/03/04 21:30:10 jlam Exp $
 
 DISTNAME=       ast54unx
 PKGNAME=        astrolog-5.40
@@ -29,8 +29,6 @@ BUILD_TARGET=	astrolog
 
 INSTALLATION_DIRS=	bin
 
-.include "../../mk/x11.buildlink3.mk"
-
 do-install:
 	@${INSTALL_DATA_DIR} ${PREFIX}/lib/astrolog
 	cd ${DISTDIR}/${DIST_SUBDIR} && \
@@ -53,4 +51,5 @@ do-install:
 	@${ECHO} "See the file ${PREFIX}/share/doc/astrolog/Helpfile.540 for"
 	@${ECHO} "help and tune ${PREFIX}/lib/astrolog/astrolog.dat"
 
+.include "../../x11/libX11/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
