--- a/misc/kp/Makefile
+++ b/misc/kp/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.24 2006/02/05 23:10:12 joerg Exp $
+# $NetBSD: Makefile,v 1.25 2006/03/04 21:30:11 jlam Exp $
 
 DISTNAME=       kp-0.96
 PKGREVISION=	1
@@ -9,8 +9,6 @@ MAINTAINER=	pkgsrc-users@NetBSD.org
 COMMENT=	The Keyboard Practicer, touch-type training program
 
 DEPENDS+=	tk>=8.3.2:../../x11/tk
-
-.include "../../mk/x11.buildlink3.mk"
 
 pre-configure:
 	for f in `${FIND} ${WRKDIR}/. -type f -print \
