--- a/games/fkiss/Makefile
+++ b/games/fkiss/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.23 2006/12/15 14:34:20 wiz Exp $
+# $NetBSD: Makefile,v 1.24 2006/12/19 12:06:28 rillig Exp $
 #
 
 DISTNAME=		fkiss-0.33
@@ -45,6 +45,6 @@ do-install:
 			>${PREFIX}/share/doc/fkiss/`${BASENAME} $$i`; \
 	done
 
+.include "../../x11/libX11/buildlink3.mk"
 .include "../../mk/oss.buildlink3.mk"
-.include "../../mk/x11.buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
