--- a/games/knightcap/Makefile
+++ b/games/knightcap/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.24 2006/02/05 23:09:18 joerg Exp $
+# $NetBSD: Makefile,v 1.25 2006/03/04 21:29:42 jlam Exp $
 
 DISTNAME=		KnightCap-3.6
 PKGNAME=		knightcap-3.6
@@ -29,5 +29,4 @@ do-install:
 	${INSTALL_DATA} ${WRKSRC}/README ${DOCDIR}
 
 .include "../../graphics/Mesa/buildlink3.mk"
-.include "../../mk/x11.buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
