--- a/games/battleball/Makefile
+++ b/games/battleball/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.21 2006/02/05 23:09:12 joerg Exp $
+# $NetBSD: Makefile,v 1.22 2006/10/04 21:43:00 wiz Exp $
 
 DISTNAME=	battleball.21.src
 PKGNAME=	battleball-2.1
@@ -19,8 +19,6 @@ SED_CMDS=	-e '/^INCS/s|$$|${CPPFLAGS}|' -e '/^LIBS/s|$$|${LDFLAGS}|'
 
 INSTALLATION_DIRS=	bin
 
-.include "../../mk/x11.buildlink3.mk"
-
 do-configure:
 	${CP} ${WRKSRC}/Makefile ${WRKSRC}/Makefile.orig; \
 	${SED} ${SED_CMDS} < ${WRKSRC}/Makefile.orig > ${WRKSRC}/Makefile
@@ -28,4 +26,5 @@ do-configure:
 do-install:
 	${INSTALL_PROGRAM} ${WRKSRC}/battleball ${PREFIX}/bin/
 
+.include "../../x11/libX11/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
