--- a/games/xmahjongg/Makefile
+++ b/games/xmahjongg/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.22 2006/01/12 20:50:01 jdc Exp $
+# $NetBSD: Makefile,v 1.23 2006/02/05 23:09:24 joerg Exp $
 #
 
 DISTNAME=	xmahjongg-3.6.1
@@ -19,5 +19,5 @@ USE_LANGUAGES=	c c++
 GCC_REQD+=              3.4
 .endif
 
-.include "../../mk/x11.buildlink3.mk"
+.include "../../x11/libX11/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
