--- a/games/cgoban/Makefile
+++ b/games/cgoban/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.11 2006/02/05 23:09:13 joerg Exp $
+# $NetBSD: Makefile,v 1.12 2006/04/25 22:03:32 rillig Exp $
 
 DISTNAME=	cgoban-1.9.12
 PKGREVISION=	1
@@ -13,5 +13,8 @@ GNU_CONFIGURE=	yes
 
 INSTALLATION_DIRS=	${PKGMANDIR}/man6 share/misc
 
-.include "../../mk/x11.buildlink3.mk"
+BUILDLINK_DEPMETHOD.libXt?=	build
+
+.include "../../x11/libX11/buildlink3.mk"
+.include "../../x11/libXt/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
