--- a/games/xbomber/Makefile
+++ b/games/xbomber/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.13 2006/02/05 23:09:24 joerg Exp $
+# $NetBSD: Makefile,v 1.14 2006/09/09 02:42:01 obache Exp $
 #
 
 DISTNAME=	xbomber.0.8
@@ -14,10 +14,9 @@ COMMENT=	Colorful game where you blow other people/robots up
 WRKSRC=		${WRKDIR}/xbomber
 MAKE_FILE=	makefile
 
-.include "../../mk/x11.buildlink3.mk"
-
 pre-install:
 	${INSTALL_DATA_DIR} ${PREFIX}/share/doc/xbomber
 	${INSTALL_DATA} ${WRKSRC}/README.txt ${PREFIX}/share/doc/xbomber
 
+.include "../../x11/libX11/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
