--- a/games/galaxa/Makefile
+++ b/games/galaxa/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.15 2006/09/09 02:42:00 obache Exp $
+# $NetBSD: Makefile,v 1.16 2006/10/04 21:43:00 wiz Exp $
 #
 
 DISTNAME=	galaxa.0.1
@@ -14,10 +14,9 @@ COMMENT=	Space game based loosely on "Galaga"
 WRKSRC=		${WRKDIR}/galaxa
 MAKE_FILE=	makefile
 
-.include "../../mk/x11.buildlink3.mk"
-
 pre-install:
 	${INSTALL_DATA_DIR} ${PREFIX}/share/doc/galaxa
 	${CP} ${WRKSRC}/README.txt ${PREFIX}/share/doc/galaxa
 
+.include "../../x11/libX11/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
