--- a/games/golddig/Makefile
+++ b/games/golddig/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.8 2006/02/05 23:09:16 joerg Exp $
+# $NetBSD: Makefile,v 1.9 2006/06/15 13:31:29 wiz Exp $
 #
 
 DISTNAME=	golddigC3.0
@@ -11,7 +11,6 @@ MAINTAINER=	pkgsrc-users@NetBSD.org
 COMMENT=	Fast action game designed for use with X
 
 USE_X11BASE=	yes
-.include "../../mk/x11.buildlink3.mk"
 
 post-build:
 	for f in ${WRKSRC}/golddig.6 ${WRKSRC}/gdedit.6; do \
@@ -19,4 +18,5 @@ post-build:
 		${MV} $$f.new $$f; \
 	done
 
+.include "../../x11/libX11/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
