--- a/games/icbm3d/Makefile
+++ b/games/icbm3d/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.12 2006/09/09 02:42:00 obache Exp $
+# $NetBSD: Makefile,v 1.13 2006/10/04 21:43:00 wiz Exp $
 #
 
 DISTNAME=	icbm3d.0.4
@@ -14,5 +14,5 @@ COMMENT=	3D X11 game of defense
 WRKSRC=		${WRKDIR}/icbm3d
 MAKE_FILE=	makefile
 
-.include "../../mk/x11.buildlink3.mk"
+.include "../../x11/libX11/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
