--- a/www/p5-HTML-Parser/Makefile
+++ b/www/p5-HTML-Parser/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.38 2006/07/19 22:46:24 wiz Exp $
+# $NetBSD: Makefile,v 1.39 2006/11/05 17:37:55 joerg Exp $
 #
 
-DISTNAME=		HTML-Parser-3.54
+DISTNAME=		HTML-Parser-3.56
 PKGNAME=		p5-${DISTNAME}
 SVR4_PKGNAME=		p5hpa
 CATEGORIES=		www perl5
