--- a/graphics/py-biggles/Makefile
+++ b/graphics/py-biggles/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.7 2006/04/17 13:46:35 wiz Exp $
+# $NetBSD: Makefile,v 1.8 2006/06/02 23:40:09 joerg Exp $
 #
 
 DISTNAME=	python-biggles-1.6.3
@@ -18,5 +18,4 @@ PYTHON_VERSIONS_ACCEPTED=	24 23 22
 .include "../../lang/python/extension.mk"
 .include "../../math/py-Numeric/buildlink3.mk"
 .include "../../graphics/plotutils/buildlink3.mk"
-.include "../../mk/x11.buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
