--- a/www/curl/Makefile
+++ b/www/curl/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.68 2006/10/31 23:04:22 wiz Exp $
+# $NetBSD: Makefile,v 1.69 2006/11/02 18:01:09 joerg Exp $
 
-DISTNAME=	curl-7.16.0
+DISTNAME=	curl-7.16.1
 CATEGORIES=	www
 MASTER_SITES=	http://curl.haxx.se/download/ \
 		ftp://ftp.sunet.se/pub/www/utilities/curl/ \
