--- a/x11/control-center/Makefile
+++ b/x11/control-center/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.10 2006/04/13 18:23:39 jlam Exp $
+# $NetBSD: Makefile,v 1.11 2006/04/17 13:46:01 wiz Exp $
 
 DISTNAME=		control-center-1.4.0.5
 PKGREVISION=		4
@@ -42,5 +42,6 @@ post-install:
 .include "../../sysutils/gnome-vfs/buildlink3.mk"
 .include "../../textproc/scrollkeeper/omf.mk"
 .include "../../x11/gnome-libs/buildlink3.mk"
+.include "../../x11/libSM/buildlink3.mk"
 
 .include "../../mk/bsd.pkg.mk"
