--- a/x11/gnome-panel/Makefile
+++ b/x11/gnome-panel/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.81 2006/11/28 22:18:23 drochner Exp $
+# $NetBSD: Makefile,v 1.82 2007/01/13 12:02:50 joerg Exp $
 #
 
-DISTNAME=		gnome-panel-2.16.2
+DISTNAME=		gnome-panel-2.16.3
 CATEGORIES=		x11 gnome
 MASTER_SITES=		${MASTER_SITE_GNOME:=sources/gnome-panel/2.16/}
 EXTRACT_SUFX=		.tar.bz2
