--- a/x11/matchbox-themes-extra/Makefile
+++ b/x11/matchbox-themes-extra/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.2 2006/02/05 23:11:40 joerg Exp $
+# $NetBSD: Makefile,v 1.3 2006/03/04 21:31:10 jlam Exp $
 #
 
 DISTNAME=	matchbox-themes-extra-0.3
@@ -11,7 +11,7 @@ MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	http://projects.o-hand.com/matchbox/
 COMMENT=	Collection of themes for Matchbox
 
-USE_DIRS+=	gnome2-1.5
+USE_DIRS+=	gnome2-1.5 xdg-1.4
 USE_LIBTOOL=	yes
 GNU_CONFIGURE=	yes
 
