--- a/x11/xfce4-session/Makefile
+++ b/x11/xfce4-session/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.16 2007/01/18 15:25:15 joerg Exp $
+# $NetBSD: Makefile,v 1.17 2007/01/23 11:53:47 martti Exp $
 
 .include "../../meta-pkgs/xfce4/Makefile.common"
 
@@ -18,6 +18,7 @@ CONFIGURE_ARGS+=	--sysconfdir=${PKG_SYSCONFBASE:Q} \
 
 REQD_DIRS+=		${XFCE4_EGBASE} ${EGDIR}
 
+USE_DIRS+=	xdg-1.4
 USE_TOOLS+=	iceauth:run
 
 BUILDLINK_DEPMETHOD.libXt?=	build
