--- a/mail/thunderbird/Makefile-thunderbird.common
+++ b/mail/thunderbird/Makefile-thunderbird.common
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile-thunderbird.common,v 1.20 2006/11/08 13:15:40 ghen Exp $
+# $NetBSD: Makefile-thunderbird.common,v 1.21 2006/12/20 12:53:32 ghen Exp $
 
 MOZILLA_BIN=		thunderbird-bin
 MOZ_VER=		1.5.0.9
@@ -27,7 +27,7 @@ CHECK_FILES_SKIP+=	${PREFIX}/lib/${MOZILLA}/components/xpti.dat
 
 post-install:
 	cd ${PREFIX}/lib/${MOZILLA} && \
-	${SETENV} LD_LIBRARY_PATH=. MOZILLA_FIVE_HOME=. HOME=${WRKSRC:Q} \
+	${SETENV} LD_LIBRARY_PATH=.:${PREFIX}/lib MOZILLA_FIVE_HOME=. HOME=${WRKSRC:Q} \
 		./${MOZILLA_BIN} -register
 
 .include "../../www/seamonkey/Makefile.common"
