--- a/www/w3m/Makefile.common
+++ b/www/w3m/Makefile.common
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile.common,v 1.44 2007/01/30 18:54:44 joerg Exp $
+# $NetBSD: Makefile.common,v 1.45 2007/01/31 12:53:03 dmcmahill Exp $
 #
 
 DISTNAME=	w3m-${W3M_VERS}
@@ -13,6 +13,7 @@ PKG_INSTALLATION_TYPES=	overwrite pkgviews
 GNU_CONFIGURE=	yes
 USE_TOOLS+=	gmake	# Needed for some combinations of options...
 USE_TOOLS+=	msgfmt
+USE_PKGLOCALEDIR=       yes
 
 W3M_VERS=	0.5.1
 
