--- a/graphics/ruby-opengl/Makefile
+++ b/graphics/ruby-opengl/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.24 2006/01/03 15:07:29 taca Exp $
+# $NetBSD: Makefile,v 1.25 2006/02/05 23:09:39 joerg Exp $
 
 DISTNAME=	rbogl-${VERSION}
 PKGNAME=	${RUBY_PKGPREFIX}-opengl-${VERSION}
@@ -26,6 +26,5 @@ post-install:
 	${INSTALL_DATA} ${WRKSRC}/README.EUC ${RUBY_DOCDIR}/opengl/README.ja
 
 .include "../../graphics/Mesa/buildlink3.mk"
-.include "../../mk/x11.buildlink3.mk"
 .include "../../lang/ruby/modules.mk"
 .include "../../mk/bsd.pkg.mk"
